@@ -16,6 +16,7 @@ def register():
         Location,
         Party,
         ProductsByLocationsStart,
+        Move,
         ShipmentIn,
         ShipmentInReturn,
         ShipmentOut,
@@ -27,7 +28,6 @@ def register():
         AssignShipmentInReturnAssignFailed,
         Period,
         Cache,
-        Move,
         Template,
         Product,
         ProductByLocationStart,
