@@ -1,3 +1,5 @@
+* Merge all shipment Many2One into shipment Reference
+* Add origin Reference on Stock Move
 * Add workflow to stock move
 
 Version 2.6.0 - 2012-10-22
